# dnfo

./: .gitignore  CHANGELOG.md  README.md  dnfo_lite.py  pylintrc  pyproject.toml  setup.cfg  setup.py
dnfo/: __init__.py  __main__.py  dnfo_args.py  query_api.py  query_endpoint.py
dnfo/database_operations/: __init__.py
dnfo/database_ops/: __init__.py  build.py  clear.py  populate.py
dnfo/database_ops/data_vars/: __init__.py
dnfo/dnd_database/: __main__.py  populate_database.py
dnfo/endpoints/: spells.py
dnfo/endpoints/char_data/: __init__.py
dnfo/endpoints/spells/: __init__.py
dnfo/get_database/: __init__.py
dnfo/queries/: __init__.py
tests/: remove_prefix_test.py  remove_suffix_test.py
