[tool.black]
line-length = 88
exclude = 'dnfo/__init__.py'

[tool.poetry]
name = "dnfo"
version = "1.0.0"
description = "cli tool to display information from the D&D 5e API"
authors = ["sudo-julia <jlearning@tuta.io>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
rich = "^9.13.0"
pymongo = "^3.11.3"
GitPython = "^3.1.14"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
